--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -21,6 +21,8 @@ master.page.profile.action.3		= Action 3
 
 master.page.login 					= Login
 master.page.logout 					= Logout
+master.page.home 					= Home
+master.page.artworks				= Artworks
 
 master.page.legal					= Privacy and cookies
 master.page.legal.lopd-lssi			= Terms
