--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -21,6 +21,9 @@ master.page.profile.action.3		= Acción 3
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+master.page.home 					= Inicio
+master.page.artworks				= Obras de arte
+
 
 master.page.legal					= Privacidad y cookies
 master.page.legal.lopd-lssi			= Términos
