Se continua con el diseño.

--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -24,6 +24,9 @@ master.page.logout 					= Logout
 master.page.home 					= Home
 master.page.artworks				= Artworks
 
+master.page.purchaser.cart			= Cart
+master.page.purchaser.purchases		= Purchases
+
 master.page.legal					= Privacy and cookies
 master.page.legal.lopd-lssi			= Terms
 master.page.legal.transpositions	= Cookies
