--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -24,6 +24,9 @@ master.page.logout 					= Salir
 master.page.home 					= Inicio
 master.page.artworks				= Obras de arte
 
+master.page.purchaser.cart			= Carrito
+master.page.purchaser.purchases		= Compras
+
 
 master.page.legal					= Privacidad y cookies
 master.page.legal.lopd-lssi			= Términos
