Se añaden botones al header y al index

--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -26,6 +26,8 @@ master.page.artworks				= Artworks
 
 master.page.purchaser.cart			= Cart
 master.page.purchaser.purchases		= Purchases
+master.page.purchaser.reviews		= My Reviews
+master.page.dashboard				= Dashboard
 
 master.page.legal					= Privacy and cookies
 master.page.legal.lopd-lssi			= Terms
