--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -26,6 +26,7 @@ master.page.artworks				= Obras de arte
 
 master.page.purchaser.cart			= Carrito
 master.page.purchaser.purchases		= Compras
+master.page.purchaser.reviews		= Mis valoraciones
 
 
 master.page.legal					= Privacidad y cookies
@@ -43,6 +44,8 @@ master.page.cart					= Carrito
 
 master.page.review					= Crítica
 master.page.artist.list				= Artistas
+master.page.dashboard				= Dashboard
+
 
 master.page.register.artist = Registro de artista
 master.page.artwork.listAll			= Listar todos las obras
