Subida de mejoras en el header

--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -28,6 +28,11 @@ master.page.purchaser.cart			= Cart
 master.page.purchaser.purchases		= Purchases
 master.page.purchaser.reviews		= My Reviews
 master.page.dashboard				= Dashboard
+master.page.profile			    	= My profile
+master.page.purchasers			    = Purchasers
+master.page.onsale				    = On sale
+master.page.sold				    = Sold
+
 
 master.page.legal					= Privacy and cookies
 master.page.legal.lopd-lssi			= Terms
