--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -45,6 +45,11 @@ master.page.cart					= Carrito
 master.page.review					= Crítica
 master.page.artist.list				= Artistas
 master.page.dashboard				= Dashboard
+master.page.profile					= Mi perfil
+master.page.purchasers			    = Compradores
+master.page.onsale				    = En venta	
+master.page.sold				    = Vendidas
+
 
 
 master.page.register.artist = Registro de artista
