--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -22,11 +22,18 @@ master.page.profile.action.3		= Action 3
 master.page.login 					= Login
 master.page.logout 					= Logout
 master.page.home 					= Home
+master.page.aboutus 				= About us
 master.page.artworks				= Artworks
 
 master.page.purchaser.cart			= Cart
-master.page.purchaser.purchases		= Purchases
+master.page.purchaser.orders		= My Orders
 master.page.purchaser.reviews		= My Reviews
+
+master.page.artist.myartworks		= My Artworks
+master.page.artist.uploadartwork	= Upload Artwork
+master.page.artist.myorders			= My Orders
+master.page.artist.myreviews		= My Reviews
+
 master.page.dashboard				= Dashboard
 master.page.profile			    	= My profile
 master.page.purchasers			    = Purchasers
