--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -22,6 +22,7 @@ master.page.profile.action.3		= Acción 3
 master.page.login 					= Entrar
 master.page.logout 					= Salir
 master.page.home 					= Inicio
+master.page.aboutus 				= 
 master.page.artworks				= Obras de arte
 
 master.page.purchaser.cart			= Carrito
@@ -36,7 +37,14 @@ master.page.legal.unsubscribe		= Darse de baja
 
 master.page.list					= Lista
 master.page.purchaser				= Comprador
-master.page.myArtwork				= Mis compras
+master.page.purchaser.orders		= Mis Pedidos
+master.page.purchaser.reviews		= Mis Valoraciones
+
+master.page.artist.myartworks		= Mis Obras
+master.page.artist.uploadartwork	= Subir Obra
+master.page.artist.myorders			= Mis Pedidos
+master.page.artist.myreviews		= Mis Valoraciones
+
 master.page.artwork					= Obra
 master.page.myList					= Mi lista
 master.page.listOnSale				= Arte en venta	
