Se sigue añadiendo funcionalidad al header

--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -24,6 +24,8 @@ master.page.logout 					= Salir
 master.page.home 					= Inicio
 master.page.aboutus 				= 
 master.page.artworks				= Obras de arte
+master.page.hello					= ¡ Hola
+master.page.excl					=   !
 
 master.page.purchaser.cart			= Carrito
 master.page.purchaser.purchases		= Compras
