--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -19,11 +19,14 @@ master.page.profile.action.1 		= Action 1
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
 
+
 master.page.login 					= Login
 master.page.logout 					= Logout
 master.page.home 					= Home
 master.page.aboutus 				= About us
 master.page.artworks				= Artworks
+master.page.hello					= Hello,  
+master.page.excl					=  !
 
 master.page.purchaser.cart			= Cart
 master.page.purchaser.orders		= My Orders
