Añadida caja de idiomas

--- a/src/main/webapp/views/artwork/messages.properties
+++ b/src/main/webapp/views/artwork/messages.properties
@@ -31,3 +31,5 @@ artwork.delete			= Delete
 artwork.edit			= Edit
 artwork.total.cost.with.tax	= The artwork´s total cost in Euros will be: 
 artwork.picture.notnull	= An artwork must have a picture
+
+artwork.sale = Sale!
