--- a/src/main/webapp/views/artwork/messages_es.properties
+++ b/src/main/webapp/views/artwork/messages_es.properties
@@ -31,3 +31,5 @@ artwork.delete			= Eliminar
 artwork.edit			= Editar
 artwork.total.cost.with.tax	= El coste total de la obra en euros será: 
 artwork.picture.notnull = Una obra debe tener una imagen
+
+artwork.sale = venta!
