--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -27,6 +27,7 @@ master.page.aboutus 				= About us
 master.page.artworks				= Artworks
 master.page.hello					= Hello,  
 master.page.excl					=  !
+master.page.chooseLanguage			= Choose language:
 
 master.page.purchaser.cart			= Cart
 master.page.purchaser.orders		= My Orders
