--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -22,10 +22,11 @@ master.page.profile.action.3		= Acción 3
 master.page.login 					= Entrar
 master.page.logout 					= Salir
 master.page.home 					= Inicio
-master.page.aboutus 				= 
+master.page.aboutus 				= Conócenos
 master.page.artworks				= Obras de arte
 master.page.hello					= ¡ Hola
 master.page.excl					=   !
+master.page.chooseLanguage			= Elegir idioma:
 
 master.page.purchaser.cart			= Carrito
 master.page.purchaser.purchases		= Compras
