Amount de carrito con cookie y correcciones

--- a/src/main/webapp/views/order/purchaser/messages.properties
+++ b/src/main/webapp/views/order/purchaser/messages.properties
@@ -19,7 +19,7 @@ order.purchaser.purchaser= purchaser
 order.purchaser.clerk= Clerk
 exchangeTable.table= Exchange table
 creditCard.error=Credit card out of date
-order.purchaser.orderLines=Order lines
+order.purchaser.orderLines= Details
 
 order.purchaser.cancel=Cancel 
 order.purchaser.nocancel=Cancelled
