--- a/src/main/webapp/views/order/purchaser/messages_es.properties
+++ b/src/main/webapp/views/order/purchaser/messages_es.properties
@@ -19,7 +19,7 @@ order.purchaser.purchaser= Consumidor
 order.purchaser.clerk= Empleado
 exchangeTable.table= Tabla de intercambio
 creditCard.error= Tarjeta de crédito caducada
-order.purchaser.orderLines=Lineas de pedido
+order.purchaser.orderLines=Detalles
 
 order.purchaser.cancel=Cancelar
 order.purchaser.nocancel=Cancelado
