--- a/src/main/webapp/views/orderLine/purchaser/messages.properties
+++ b/src/main/webapp/views/orderLine/purchaser/messages.properties
@@ -15,6 +15,7 @@ orderLine.purchaser.taxValue		= Tax value
 orderLine.purchaser.profit			= Profit
 orderLine.purchaser.totalCost		= Total cost
 
+orderLine.purchaser.paypal			= Pay with PayPal
 orderLine.purchaser.back= Back
 
 orderLine.purchaser.commit.error = ¡Error!
