--- a/src/main/webapp/views/orderLine/purchaser/messages_es.properties
+++ b/src/main/webapp/views/orderLine/purchaser/messages_es.properties
@@ -15,6 +15,7 @@ orderLine.purchaser.taxValue		= Impuesto
 orderLine.purchaser.profit			= Beneficio
 orderLine.purchaser.totalCost		= Coste total
 
+orderLine.purchaser.paypal			= Pagar con Paypal
 orderLine.purchaser.back= Volver
 
 orderLine.purchaser.commit.error = ¡Error!
